# RequestManager

./: requirements.txt  setup.cfg
documentation/: diagram
src/austin_heller_repo/: backup_request_manager.py  request_manager.py
src/request_manager_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: request_manager_test.py
