[metadata]
name = request-manager-austinhellerrepo
version = 0.0.4
author = Austin Heller
description = A basic request framework for sending requests for data and receiving responses
url = https://github.com/AustinHellerRepo/RequestManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  kafka-manager-austinhellerrepo@git+https://github.com/AustinHellerRepo/KafkaManager
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading

[options.packages.find]
where = src
